@@ -32,6 +32,7 @@ public:
 
 // Implementation
 protected:
+	void SaveConfig(BOOL bApply);
 	CMenu *m_pCtxMenu;
 	CHARRANGE m_crSavedSelection;
 	void OnStopParsing(void);
@@ -62,6 +63,7 @@ protected:
 	afx_msg void OnEditSelectAll();
 	afx_msg void OnContextMenu(CWnd* pWnd, CPoint point);
 	afx_msg void OnConfigSave();
+	afx_msg void OnConfigSaveandapply();
 	//}}AFX_MSG
 	afx_msg void OnEditCtrlChange();
 	DECLARE_MESSAGE_MAP()
