@@ -2,6 +2,7 @@
 * 0.2.4
 *
 
+- Implemented agent's configuration file editing from console
 - Implemented actions provided by subagents
 - Built-in action Agent.Restart added to core agent
 - Fixed issues: #37, #38
